@@ -14,8 +14,11 @@ jsoup changelog
   * Bugfix: in the XML parser, XML processing instructions without attributes would be serialized as if they did.
     <https://github.com/jhy/jsoup/issues/770>
 
-  * Bugfix: updated the HtmlTreeParser resetInsertionMode to the current spec for supported elements
+  * Bugfix: updated the HtmlTreeParser resetInsertionMode to the current spec for supported elements.
     <https://github.com/jhy/jsoup/issues/1491>
+
+  * Bugfix: fixed an NPE when parsing fragment HTML into a table element.
+    <https://github.com/jhy/jsoup/issues/1603>
 
   * Bugfix [Fuzz]: fixed a slow parse when a tag or an attribute name has thousands of null characters in it.
     <https://github.com/jhy/jsoup/issues/1580>
